Fix green shadow not covering entire length of code

--- a/frontend/src/static/css/style.scss
+++ b/frontend/src/static/css/style.scss
@@ -446,6 +446,10 @@ header{
             }
         }
 
+        .line-content{
+            padding-left: 2rem;
+        }
+
         .untouched{
             $grey:mui-color('grey', '400');
 
